<resources>
    <string name="app_name">InventoryManager</string>
    <string name="title_activity_homeview_v2">HomeviewV2Activity</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="hint_name">Enter Name</string>
    <string name="save_button">Save</string>
    <string name="hint_description">Enter Description</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="create_new_location">Create New Location</string>
    <string name="title_activity_item_list">ItemListActivity</string>

    <string name="title_activity_item_view">itemView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
