<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_location"
                android:textStyle="italic"
                android:textSize="18dp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationName"
                android:layout_below="@+id/title"
                android:hint="@string/hint_name">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionLocationAddress"
                android:layout_below="@+id/locationName"
                android:hint="@string/hint_description">
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButtonLocation"
                android:layout_below="@+id/descriptionLocationAddress"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginRight="5dp">
            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>